# flaskful

./: .gitchangelog.rc  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  tox.ini
.github/: dependabot.yaml  release-drafter.yaml
src/apispec_ui/: __init__.py  base.py  flask.py  utils.py
src/apispec_ui/swagger-ui/: index.html
tests/: test_flask.py  test_flaskful.py  test_utils.py
