[tool.poetry]
name = "apispec-ui"
version = "0.1.3"
description = "Generate UI interactive API's from APISpec specifications."
authors = ["Renato Damas <rena2damas@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = ""
repository = "https://github.com/rena2damas/apispec-ui"
documentation = ""
keywords = [
    "flaskful",
    "swagger",
    "openapi",
    "oas",
    "oas2",
    "oas3",
    "rest",
    "api",
    "web",
    "flask",
    "python",
    "python3"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

[tool.poetry.dependencies]
apispec = { extras = ["yaml"], version = "^5.2.2", optional = true }
environs = "^9.5.0"
Flask = { version = "^2.2.2", optional = true }
gunicorn = "^20.1.0"
python = "^3.7"

[tool.poetry.dev-dependencies]
apispec = { extras = ["yaml"], version = "^5.2.2" }
coverage = "^6.4.4"
Flask = "^2.1.3"
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[tool.poetry.urls]
issues = "https://github.com/rena2damas/apispec-ui/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
